<resources>
    <string name="app_name">咪咕棋牌</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="returnStr">返回</string>
    <string name="login">登陆</string>
    <string name="getbackPW">找回密码</string>
    <string name="regedit">注　　册</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="remember">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="fastlogin">快速进入</string>
    <string name="gameplayer">游戏玩家</string>
    <string name="accoutlogin">账号登录</string>
    <string name="sharefriend">邀请好友</string>
    <string name="smscontent">我在玩【咪咕棋牌】，坐等天上掉话费，抢得我乐不思蜀，一起来玩吧：http://g.10086.cn/gamecms/go/qpds</string>
    <string name="popinfo">尊敬的用户，您将要开始的“咪咕棋牌”是由深圳市名游网络科技有限公司开发、拥有、运营的集合类应用，我们推荐您使用wlan网络体验游戏，如果使用非wlan网络，则有可能产生GRPS流量，流量费用将根据您的套餐标准收取，购买道具时手机会发生购买短信，详情请咨询客服，客服电话：400777996</string>
    <string name="printinfo_">手机&#160;/&#160;邮箱填写即为绑定</string>
    <string name="printinfo">•&#160;保障账号安全\n•&#160;找回密码\n•&#160;保障成功领取游戏奖励\n•&#160;参赛身份认证</string>
    <string name="lobby_service_info">&#160;感谢您的支持, 若有紧急问题需要咨询, 请QQ或电话联系客服。\n&#160;QQ: 754813101\n&#160;电话:&#160;0755&#160;-&#160;86219039</string>
    <string name="settingTitle">设置</string>
    <string name="wifiUpdate">Wi-Fi 接入自动更新</string>
    <string name="notifiySound">通知声音提示</string>
    <string name="notifyVib">通知震动提示</string>
    <string name="swapAccout">切换账号</string>
    <string name="changePassword">修改密码</string>
    <string name="ddz_feedback">意见反馈</string>
    <string name="buyerror">游戏目前只支持中国移动手机用户进行支付，多谢您的支持！</string>
    <string name="help">帮助</string>
    <string name="account_str2">账　　号</string>
    <string name="psw_str2">密　　码</string>
    <string name="psw_edit_hint">请输入您的常用密码</string>
    <string name="confirm_psw_str">确认密码</string>
    <string name="confirm_psw_edit_hint">请再次输入密码</string>
    <string name="register_str">立即注册</string>
    <string name="login_exit_game">退出游戏</string>
    <string name="login_tip">提示</string>
    <string name="login_ensure">确认</string>
    <string name="login_cancel">取消</string>
    <string name="login_registe_account_tip">•您可以使用6~20个字符做为账号.</string>
    <string name="login_registe_password_tip">•密码为6~16个字符,区分大小写,字母/数字开头</string>
    <string name="login_registe_account_hint">手机号/QQ号/自定义</string>
    <string name="login_find_out_new_verson">检测到新版本</string>
    <string name="login_download_doing">开始升级...</string>
    <string name="login_downloaded">下载了</string>
    <string name="login_game_downloaded_1">游戏更新了</string>
    <string name="login_game_downloaded_2">请稍后...</string>
    <string name="login_game_begin_download">游戏更新了0%，请稍后...</string>
    <string name="login_repassword_error">您两次输入的密码不一致，请重输。</string>
    <string name="login_registe_success_1">恭喜你注册成功！</string>
   	<string name="login_registe_success_2">你的账号是</string>
    <string name="login_registe_success_3">你的密码是</string>
    <string name="login_registe_success_4">点击确定将自动登陆</string>
     <string name="remote_call_failed">调用远程充值服务失败！</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。</string>
    <string name="Ensure">确定</string>
    <string name="Cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="prompt2">提   示</string>
    <string name="wenxintishi">温馨提示</string>
    <string name="Send">发送</string>
    <string name="go">打开</string>
    <string name="back">返回</string>
    <string name="feedback">请输入您对游戏的意见</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="buy_tip">您正在请求购买道具，如果您的移动点数不足，剩余部分将从移动话费扣取(1元=100点)，确认支付吗？</string>
    <string name="buyLabel">您的购买短信已发送，请耐心等候购买结果。话费不足、卡类限制、超过日限/月限等原因将导致购买失败。\n如有任何疑问，请联系客服：0755 86219039</string>
    <string name="buyAlarm">亲，为避免您重复购买，请收到反馈结果后，再二次购买吧</string>
    <string name="buyWarning">暂时没有适合您当前平台的道具支付方式，多谢您的支持</string>
    <string name="moregoods">更多商品>></string>
    <string name="recommend">热力推荐</string>
    <string name="ddz_year">年</string>
    <string name="ddz_month">月</string>
    <string name="ddz_day">日</string>
    <string name="ddz_permanence">永久</string>
    <string name="ddz_you_have">您有</string>
    <string name="ddz_huafeijuan">张话费券</string>
    <string name="ddz_overdue">天后过期</string>
    <string name="ddz_today_overdue">在今天过期</string>
    <string name="ddz_sex">性别</string>
    <string name="ddz_sex_male">男</string>
    <string name="ddz_sex_famale">女</string>
    <string name="ddz_account">账号</string>
    <string name="ddz_account_2">账号: </string>
    <string name="ddz_yuanbao">元宝</string>
    <string name="ddz_huafeijuan_lable">话费券</string>
    <string name="ddz_week_points">本周积分</string>
    <string name="ddz_week_total_points">本周累积积分</string>
    <string name="ddz_week_rank">周排名</string>
    <string name="ddz_person">人</string>
    <string name="ddz_wan_ren">万人</string>
    <string name="ddz_into_fanzuobi">为您启动防作弊组桌系统，请稍候</string>
    <string name="ddz_no_message">尚未有消息，敬请稍后&#8230;</string>
    <string name="ddz_room_tuijian">推    荐</string>
    <string name="ddz_game_over">游戏已结束，请返回分区！</string>
    <string name="ddz_adapte_failed">速配失败,请稍后再试。</string>
    <string name="ddz_level">您的实力已经超出本场上限，去挑战更高级的对战场吧！</string>
    <string name="ddz_into_game_room">正在进入游戏房间</string>
    <string name="ddz_adapte_game_room">正在速配游戏房间，请稍候</string>
    <string name="ddz_no_net">当前无可用网络</string>
    <string name="ddz_set_net">设置网络</string>
    <string name="ddz_empress_retry">稍后重试</string>
    <string name="ddz_function_not_available">该功能暂不可用&#8230;</string>
    <string name="ddz_count">数量</string>
    <string name="ddz_period_of_validity">有效期</string>
    <string name="ddz_shared">分享</string>
    <string name="ddz_success">领取奖励成功, 祝您游戏愉快！</string>
    <string name="ddz_sdcard_error">请检测Sdcard是否存在！Sdcard卡被禁用！</string>
    <string name="ddz_version">版本号</string>
    <string name="ddz_update_date">更新时间</string>
    <string name="ddz_retry">重试</string>
    <string name="ddz_obtain_server_info_failed">获取服务器信息失败，请重试！</string>
    <string name="ddz_obtain_gift_success">领取成功！</string>
    <string name="ddz_has_obtain_gift">"您已经领取过奖励了！</string>
    <string name="ddz_obtain_gift_failed">领取失败，请重试！</string>
    <string name="ddz_free_zhuandou">免费赚豆</string>
    <string name="ddz_download_failed">下载失败!</string>
    <string name="ddz_file_save_path">文件保存路径</string>
    <string name="ddz_webview_loading">网页加载可能比较慢，请您耐心等候…</string>
    <string name="ddz_web_connetion_failed">网络不给力，连接失败了，请稍候再试！</string>
    <string name="ddz_web_reconnetion_failed">网络不给力，重连失败了，请稍候再试！</string>
    <string name="ddz_web_connetion_cross">网络连接断开，请检查您的网络或退出游戏稍后再试！</string>
    <string name="ddz_account_load_other_way">您的账号已经在其他地方登录，请退出后再登录！</string>
    <string name="ddz_into_game">省流量、低耗电，话费、实物最好赚</string>
    <string name="ddz_notice_game_net_error">网络连接异常，请重新登录！</string>
    <string name="ddz_yin_huafei_match">赢话费赛</string>
    <string name="ddz_gift_ledou_match">奖10万乐豆比赛</string>
    <string name="ddz_gift_ledou">报名费：1000乐豆</string>
    <string name="ddz_ledou_match_difen">(底分 100)</string>
    <string name="ddz_point_game">点数游戏</string>
    <string name="ddz_point_game_info">游戏点数是移动梦网游戏频道为用户提供的一种游戏支付方式。用户可以使用账户中的点数来购买游戏或者消费游戏道具！</string>
    <string name="ddz_buy_first_buy_gift">首次充值礼包</string>
    <string name="ddz_vip">VIP2，3000PK券x10,初级门票x10</string>
    <string name="ddz_vip_jiazhu">看牌，加注</string>
    <string name="ddz_vip_libao">Vip1级礼包</string>
    <string name="ddz_vip_daoqi_date">到期时间：2013&#8211;08&#8211;05</string>
    <string name="ddz_vip_chengzhangzhi">VIP成长值：</string>
    <string name="ddz_vip_week_gift">每周奖励</string>
    <string name="ddz_vip_zensong">赠送</string>
    <string name="ddz_vip_xufei">续费VIP</string>
    <string name="ddz_vip_jiacheng">经验加成</string>
    <string name="ddz_vip_hecheng_chenggonglu">合成成功率</string>
    <string name="ddz_vip_other_player_info">其他玩家信息(指数)</string>
    <string name="ddz_vip_level">VIP等级：</string>
    <string name="inquire">查询</string>
    <string name="notice">公告</string>
    <string name="messageBox">消息盒子</string>
    <string name="mygoods">我的物品</string>
    <string name="suggestion">意见箱</string>
    <string name="mark">商 城</string>
    <string name="usercenter">个人中心</string>
    <string name="verinfo">版本信息</string>
    <string name="servercenter">服务中心</string>
    <string name="servercenter_error">服务中心数据获取失败，请稍后再试~</string>
    <string name="match">比赛报名</string>
    <string name="pointzone">点数专区</string>
    <string name="netsports">全国网络智运会</string>
    <string name="changepassword">修改密码</string>
    <string name="empty">这里空空的，去商城看一下吧^_^</string>
    <string name="noticeSystem">系统消息</string>
    <string name="noticePerson">个人消息</string>
    <string name="recharge">充值</string>
    <string name="roominfo">房间信息</string>
    <string name="getticket">话费领取</string>
    <string name="challenge">好友约战</string>
    <string name="actioncenter">活动中心</string>
    <string name="mix">合成</string>
    <string name="goodsmis">物品合成</string>
    <string name="balance">余额查询</string>
    <string name="personDetail">个人明细</string>
    <string name="pointHelp">点数帮助</string>
    <string name="balance_point">您当前剩余点数为：</string>
    <string name="select_month">请选择月份</string>
    <string name="ddz_returnStr">返回</string>
    <string name="descr">该专区只支持中国移动用户</string>
    <string name="nodata">您好，这里尚未有数据！</string>
    <string name="snodata">您还没有收到消息哟^_^</string>
    <string name="pnodata">您还没有收到消息哟^_^</string>
    <string name="titlecontain">【%1$s】</string>
    <string name="basicIconLabel">基本资料</string>
    <string name="detailsIconLabel">详细资料</string>
    <string name="matchIconLabel">比赛资料</string>
    <string name="changeHead">修改头像</string>
    <string name="matchLabel">斗地主娱乐赛比赛信息</string>
    <string name="weekPoint">本周累计积分：</string>
    <string name="weekRank">周排名：</string>
    <string name="moreRank">更多比赛排名信息：</string>
    <string name="rankorder">大赛排名</string>
    <string name="function_no_open"> 建设中，敬请期待^_^</string>
    <string name="serviceCall">客服电话（24小时）：0755 86219039</string>
    <string name="loading">加载中</string>
    <string name="rechargeLabel">1元=100点数，每日充值上限300元</string>
    <string name="yeepayLabel">充值前请仔细阅读帮助，并确认您选择的充值卡面额和实际面额一致，\n否则将会导致消费不成功和余额丢失。</string>
    <string name="detailsLabel">*详细资料为参加比赛的必填项。除手机号码外，其它资料填写后不能做修改。</string>
    <string name="verification">*比赛身份认证，仅限填写一次</string>
    <string name="phoneNumLabel">*便于获奖时能联系到你哟！</string>
    <string name="modifyLabel1">移动用户修改密码:</string>
    <string name="gain">领 取</string>
    <string name="poplarize_duration">在线时长: 100小时</string>
    <string name="poplarize_bouns">5话费</string>
    <string name="poplarize_gain_date">02/28 已领取</string>
    <string name="poplarize_achieve_date">2013/03/31</string>
    <string name="nickname">昵称</string>
    <string name="info_get">领取</string>
    <string name="ddz_pay_chongzhi_jiner">充值金额：</string>
    <string name="ddz_pay_chongzhi_click_input_jiner">点击输入金额</string>
    <string name="ddz_pay_chongzhi_tip">提示:</string>
    <string name="ddz_pay_chongzhi_support_info"> 该专区只支持中国移动用户</string>
    <string name="ddz_pay_chongzhi_shangxian">每月上限30000点</string>
    <string name="ddz_pay_chongzhi_zhuanhuan">1元=100点</string>
    <string name="ddz_pay_chongzhi_input_lable">(请输入1&#8211;300元任意整数金额)</string>
    <string name="more_game_gift">奖励</string>
    <string name="more_game_doudizhu">斗地主</string>
    <string name="more_game_size">大小：30M</string>
    <string name="more_game_info">简介</string>
    <string name="more_game_download">下载</string>
    <string name="match_group_rank_label">名次</string>
    <string name="match_group_jifen_label">积分</string>
    <string name="new_nickname">新的昵称</string>
    <string name="input_nickname">请输入新的昵称</string>
    <string name="bean_need">本次修改需要</string>
</resources>