<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                style="@style/baseStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tvdegree"
                android:text="@string/ddz_vip_chengzhangzhi"
                android:textSize="16sp" />

            <com.mykj.andr.ui.widget.CustomProgressBar
                android:id="@+id/customProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView1"
                android:max="3000"
                android:progress="2200" />

            <TextView
                android:id="@+id/tvdegree1"
                style="@style/baseStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/ddz_vip_level"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvdegree"
                style="@style/baseStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tvdegree1"
                android:text="2"
                android:textColor="#feba30"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <TextView
                android:id="@+id/tvEndDate"
                style="@style/baseStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tvweekaward"
                android:text="@string/ddz_vip_daoqi_date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvweekaward"
                style="@style/baseStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/ddz_vip_week_gift"
                android:textColor="#feba30"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lvVip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/btnGivePresent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_orange"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:text="@string/ddz_vip_week_gift"
            android:textColor="@color/orange_btn_text_color" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_orange"
            android:textColor="@color/orange_btn_text_color"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:text="@string/ddz_vip_zensong"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnRenewalVip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_orange"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:text="@string/ddz_vip_xufei"
            android:textColor="@color/orange_btn_text_color" />
    </LinearLayout>

</LinearLayout>