<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="horizontal"
    android:padding="5dp" 
    android:gravity="center_vertical"
    android:longClickable="false">
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_more_game_list_icon"
        android:src="@drawable/game_default_icon"
         />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="2dp"
        >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffdd57"
            android:textSize="20sp"
            android:id="@+id/tv_more_game_list_appname"
            android:text="@string/more_game_doudizhu" />
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_more_game_list_appsize"
                android:textColor="#8c99a4"
                android:text="@string/more_game_size" />
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" 
                android:id="@+id/ll_more_game_progress" android:orientation="horizontal"
                android:gravity="center_vertical">
                <ProgressBar android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pb_more_game_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:minHeight="5dp"
                    android:progressDrawable="@drawable/more_game_progressbar"
                    android:max="100"
                    android:progress="50"
                    />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_more_game_list_progressdetail"
                    android:textColor="#ffffff"
                    android:text="10%" />
            </LinearLayout>
            
        </LinearLayout>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_more_game_list_discription"
            android:textColor="#ffffff"
            android:text="@string/more_game_info" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_more_game_reward"
            android:textColor="#ffffdd57"
            android:textSize="16sp"
            android:text="@string/more_game_gift" />
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_more_game_oper"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/tab_btn_blue_selector"
            android:text="@string/more_game_download"/>
    </LinearLayout>
</LinearLayout>